:sparkles: Fix CORS issues and localization bugs.

--- a/src/index.html
+++ b/src/index.html
@@ -263,7 +263,7 @@
           <p id="app-details-modal-app-name" class="modal-card-title">Unknown app name</p>
           <button class="delete" data-bulma-modal="close"></button>
         </header>
-        <section class="modal-card-body">
+        <section id="app-details-modal-details-container" class="modal-card-body">
           <div id="app-details-modal-app-screenshots-container" class="container">
             <div class="content">
               <div id="app-details-modal-app-screenshots" class="app-modal-screenshots"></div>
