:rocket: Add Polish translation.

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,7 @@
                 <span class="select is-fullwidth">
                   <select id="lang-select" disabled>
                     <option value="en">English</option>
+                    <option value="pl">Polskie</option>
                     <option value="tl">Tagalog</option>
                     <option value="vi">Tiếng Việt</option>
                   </select>
